--- a/src/test-performance-clicking-through-prod-stepwise-measurement-extended-version.html
+++ b/src/test-performance-clicking-through-prod-stepwise-measurement-extended-version.html
@@ -57,6 +57,16 @@
 	<td>label=50</td>
 </tr>
 <tr>
+	<td>storeEval</td>
+	<td>{new Date()}</td>
+	<td>startTime</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=img[alt=&quot;Next&quot;]</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>css=img[alt=&quot;Next&quot;]</td>
 	<td></td>
@@ -73,12 +83,17 @@
 </tr>
 <tr>
 	<td>lapAndLog</td>
-	<td>Edit_Existing_Subject - ClickSubjectMatrix</td>
+	<td>Extended_Edit_Existing_Subject - ClickSubjectMatrix</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//tr[@id='findSubjects_row4']/td[7]/table/tbody/tr/td/a/img</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='View'])[8]</td>
+	<td>xpath=(//a[contains(text(),'View/Enter Data')])[4]</td>
 	<td></td>
 </tr>
 <tr>
@@ -87,19 +102,109 @@
 	<td></td>
 </tr>
 <tr>
-	<td>selectAndWait</td>
-	<td>id=sectionTabSelectElement</td>
-	<td>label=Script</td>
+	<td>lapAndLog</td>
+	<td>Extended_Edit_Existing_Subject - Section1_Click</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=srh</td>
+	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=input33581</td>
-	<td>Data entered on ${startTime}</td>
+	<td>id=input86172</td>
+	<td>1</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=input33582</td>
-	<td>25:45</td>
+	<td>id=input86173</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86174</td>
+	<td>2</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86175</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86176</td>
+	<td>3</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86177</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86178</td>
+	<td>4</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86179</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86180</td>
+	<td>5</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86181</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86182</td>
+	<td>6</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86183</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86184</td>
+	<td>7</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86185</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86186</td>
+	<td>8</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86187</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86188</td>
+	<td>9</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86189</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input86172</td>
+	<td>9999999</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -108,8 +213,8 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=input33582</td>
-	<td>05:45</td>
+	<td>id=input86172</td>
+	<td>99</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -118,7 +223,37 @@
 </tr>
 <tr>
 	<td>lapAndLog</td>
-	<td>Edit_Existing_Subject - EditSubjectMatrix</td>
+	<td>Extended_Edit_Existing_Subject - Section2_Edit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input33582</td>
+	<td>24:01</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input33581</td>
+	<td>One plus one makes two</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=srl</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=input33582</td>
+	<td>00:01</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=srl</td>
+	<td></td>
+</tr>
+<tr>
+	<td>lapAndLog</td>
+	<td>Extended_Edit_Existing_Subject - Section3_Edit</td>
 	<td></td>
 </tr>
 <tr>
