--- a/src/test-performance-suite.html
+++ b/src/test-performance-suite.html
@@ -11,6 +11,7 @@
 <tr><td><a href="test-performance-clicking-through-prod-3.html">test-performance-clicking-through-prod-3</a></td></tr>
 <tr><td><a href="test-performance-edit-existing-subject-prod-2.html">test-performance-edit-existing-subject-prod-2</a></td></tr>
 <tr><td><a href="test-performance-edit-existing-subject-prod-stepwise-measurement.html">test-performance-edit-existing-subject-prod-stepwise-measurement</a></td></tr>
+<tr><td><a href="test-performance-clicking-through-prod-stepwise-measurement-extended-version.html">test-performance-edit-existing-subject-prod-stepwise-measurement-extended-version</a></td></tr>
 </tbody></table>
 </body>
 </html>
