--- a/src/test-performance-clicking-through-prod-stepwise-measurement-extended-version.html
+++ b/src/test-performance-clicking-through-prod-stepwise-measurement-extended-version.html
@@ -47,8 +47,18 @@
 	<td></td>
 </tr>
 <tr>
+	<td>lapAndLog</td>
+	<td>Extended_Edit_Existing_Subject - Login</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=Subject Matrix</td>
+	<td></td>
+</tr>
+<tr>
+	<td>lapAndLog</td>
+	<td>Extended_Edit_Existing_Subject - LoadSubjectMatrix_size_15</td>
 	<td></td>
 </tr>
 <tr>
@@ -57,9 +67,9 @@
 	<td>label=50</td>
 </tr>
 <tr>
-	<td>storeEval</td>
-	<td>{new Date()}</td>
-	<td>startTime</td>
+	<td>lapAndLog</td>
+	<td>Extended_Edit_Existing_Subject - LoadSubjectMatrix_size_50</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -97,13 +107,18 @@
 	<td></td>
 </tr>
 <tr>
+	<td>startLap</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>name=bt_EnterData1</td>
 	<td></td>
 </tr>
 <tr>
 	<td>lapAndLog</td>
-	<td>Extended_Edit_Existing_Subject - Section1_Click</td>
+	<td>Extended_Edit_Existing_Subject - Section1_Save</td>
 	<td></td>
 </tr>
 <tr>
@@ -217,13 +232,18 @@
 	<td>99</td>
 </tr>
 <tr>
+	<td>startLap</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>id=srl</td>
 	<td></td>
 </tr>
 <tr>
 	<td>lapAndLog</td>
-	<td>Extended_Edit_Existing_Subject - Section2_Edit</td>
+	<td>Extended_Edit_Existing_Subject - Section2_Save</td>
 	<td></td>
 </tr>
 <tr>
@@ -247,13 +267,18 @@
 	<td>00:01</td>
 </tr>
 <tr>
+	<td>startLap</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>id=srl</td>
 	<td></td>
 </tr>
 <tr>
 	<td>lapAndLog</td>
-	<td>Extended_Edit_Existing_Subject - Section3_Edit</td>
+	<td>Extended_Edit_Existing_Subject - Section3_Save</td>
 	<td></td>
 </tr>
 <tr>
