--- a/src/test-performance-edit-existing-subject-prod-2.html
+++ b/src/test-performance-edit-existing-subject-prod-2.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="https://www.openclinica.nl/" />
+<link rel="selenium.base" href="https://www-acc.openclinica.nl/" />
 <title>test-performance-edit-existing-subject-prod-2</title>
 </head>
 <body>
