Rechecked the script and added an explicit 'startLap' before each measurement. As discussed with MC this morning.

--- a/src/test-performance-clicking-through-prod-stepwise-measurement-extended-version.html
+++ b/src/test-performance-clicking-through-prod-stepwise-measurement-extended-version.html
@@ -47,6 +47,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>startLap</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=Subject Matrix</td>
 	<td></td>
@@ -62,13 +67,18 @@
 	<td>label=50</td>
 </tr>
 <tr>
-	<td>lapAndLog</td>
-	<td>Extended_Edit_Existing_Subject - LoadSubjectMatrix_size_50</td>
+	<td>startLap</td>
+	<td></td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
 	<td>css=img[alt=&quot;Next&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>lapAndLog</td>
+	<td>Extended_Edit_Existing_Subject - LoadSubjectMatrix_size_50</td>
 	<td></td>
 </tr>
 <tr>
